# web_api

./: .env  Cargo.toml
src/: connection.rs  main.rs
src/error/: mod.rs
src/middleware/: auth.rs  jwt.rs  validate.rs
src/model/: category.rs  mod.rs  user.rs
src/routes/: category.rs  user.rs
