[package]
name = "rust_web_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mongodb = "2.0.2"
rocket = {version="0.5.0-rc.1", features=["json", "secrets"]}
serde = {version="1", features =["derive"]}
serde_json ="1.0.70"
bson="2.0.1"
log="0.4.14"
fast_log="1.3"
dotenv="0.15.0"
bcrypt="0.10.1"
regex ="1.5.2"
jsonwebtoken = "7.2.0"
chrono= "0.4.19"
base64= "0.13.0"
